fixed bugs: flickering, enemies reaching 0 hp but not dissapearing, enimes losing health at insane rate once stepping on trap.

--- a/style.css
+++ b/style.css
@@ -28,17 +28,23 @@ canvas {
     padding-bottom: 0px;
 }
 
-.gmbo {
-    background-image: url('./assets/spikes.png');
+.gmbuttons {
+    background-color: green;
     color: white;
     margin: 5px;
     width: 68px;
     height: 50px;
 }
 
-.gmboprice {
+.gmbo {
+    background-image: url('./assets/spikes.png');;
+}
+
+.gmbprice {
     color: white;
-    margin-top: 0px;
+    margin-left: 10px;
+    margin-right: 10px;
+    display: inline;
 }
 
 .game_menu p {
